# NDK

./: .gitignore  ffplay.bat
AppUnInstallFeedback/app/: .gitignore  build.gradle
FFMpegEncoder/: FFMpegEncoder.sln
FFMpegEncoder/FFMpegEncoder/: EncoderMain.cpp  Error.h  FFMpegEncoder.vcxproj  FFMpegEncoder.vcxproj.filters
FFMpegRemuxer/: FFMpegRemuxer.sln
FFMpegRemuxer/FFMpegRemuxer/: FFMpegRemuxer.vcxproj  FFMpegRemuxer.vcxproj.filters  FFMpegRemuxerHeader.h  (+6 more)
FFMpegScaling/: FFMpegScaling.sdf  FFMpegScaling.sln
FFmpeg/: AndroidManifest.xml
FFmpegDecoder/: FFmpegDecoder.sln
FFmpegDemuxer/: FFmpegDemuxer.sln
FFmpegMuxer/: FFmpegMuxer.sdf  FFmpegMuxer.sln
FFmpegPlayer/: .cproject  .project
FMLive/: gradle.properties  import-summary.txt
HelloARNative/: build.gradle  gradle.properties
IncrementalUpdate/app/: CMakeLists.txt  build.gradle
IncrementalUpdate/app/key/: reedMe.txt  shkfemo.keystore
IncrementalUpdate/app/src/androidTest/java/com/fmtech/incrementalupdate/: ExampleInstrumentedTest.java
IncrementalUpdate/app/src/main/: AndroidManifest.xml
IncrementalUpdate/app/src/main/cpp/: BsPatch.h  bspatch.c
IncrementalUpdate/app/src/main/java/com/fmtech/incrementalupdate/: ApkUtils.java  BsPatch.java  Constants.java  DownloadUtils.java  MainActivity.java
IncrementalUpdate/app/src/main/res/layout/: activity_main.xml
IncrementalUpdate/app/src/main/res/xml/: file_paths.xml
IncrementalUpdate/app/src/test/java/com/fmtech/incrementalupdate/: ExampleUnitTest.java
JniLinuxPthread/: .project  AndroidManifest.xml
video/: sintel_640_360.h264
(+286 files in other folders)
